--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title> Jaden!</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Testing this page :)</p>
+
+<h1>About Me</h1>
+<p>⚠️🛠Under Construction🛠⚠️</p>
+
+<h2>Links:</h2>
+<p>⚠️🛠Under Construction🛠⚠️</p>
+
 </body>
 </html>
