--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
 
 <h1>About Me</h1>
-<p>⚠️🛠Under Construction🛠⚠️</p>
+<p>:warning:Under Construction:warning:</p>
 
 <h2>Links:</h2>
-<p>⚠️🛠Under Construction🛠⚠️</p>
+<p>:warning:Under Construction:warning:</p>
 
 </body>
 </html>
