Revert "Emojii test"
This reverts commit 14dbf24db3b15b9badf2d9dd2fcec0e93eeeafd8.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
 
 <h1>About Me</h1>
-<p>:warning:Under Construction:warning:</p>
+<p>⚠️🛠Under Construction🛠⚠️</p>
 
 <h2>Links:</h2>
-<p>:warning:Under Construction:warning:</p>
+<p>⚠️🛠Under Construction🛠⚠️</p>
 
 </body>
 </html>
