--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
+<head>
+<title>Jaden!</title>
+</head>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Testing this page :)</p>
+
+<h1>Welcome To My Page!</h1>
+
+<h2>About Me</h2>
+<p>🛠Under Construction🛠</p>
+
+<h2>Links:</h2>
+<p>🛠Under Construction🛠
+<a href="https://www.instagram.com/jaden.nl/">Instagram</a>
+<a href="https://goo.gl/photos/8LdSrgSgokeMkGHH6">Snapchat</a>
+</p>
+
+
 </body>
 </html>
