--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html>
 <head>
-<title> Jaden!</title>
+  <style>
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+</style>
+<title>Jaden!</title>
 </head>
+<html>
 <body>
 
-<h1>About Me</h1>
-<p>:warning:Under Construction:warning:</p>
+<h1>Welcome To My Page!</h1>
+
+<h2>About Me</h2>
+<p>🛠Under Construction🛠</p>
 
 <h2>Links:</h2>
-<p>:warning:Under Construction:warning:</p>
+<p>🛠Under Construction🛠
+<a href="https://www.instagram.com/jaden.nl/">Instagram</a>
+<a href="https://goo.gl/photos/8LdSrgSgokeMkGHH6">Snapchat</a>
+</p>
+
 
 </body>
 </html>
