--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <head>
-<title>Jaden!</title>
+<title>
+  Jaden!
+</title>
 </head>
 <html lang="en-US">
 <body>
 
-<h1>Welcome To My Page!</h1>
-
-<h2>About Me</h2>
-<p>🛠Under Construction🛠</p>
-
-<h2>Links:</h2>
-<p>🛠Under Construction🛠
+<h1>
+  Welcome To My Page!
+</h1>
+<h2>
+  About Me
+</h2>
+<p>
+  🛠Under Construction🛠
+</p>
+<hr>
+<h2>
+  Links:
+</h2>
+<p>
+  🛠Under Construction🛠
 <a href="https://www.instagram.com/jaden.nl/">Instagram</a>
 <a href="https://goo.gl/photos/8LdSrgSgokeMkGHH6">Snapchat</a>
 </p>
