--- a/html/index.html
+++ b/html/index.html
@@ -29,9 +29,7 @@
     Links:
   </h2>
   <p>
-    🛠Under Construction🛠
-    <a href="https://www.instagram.com/jaden.nl/">Instagram</a>
-    <a href="https://goo.gl/photos/8LdSrgSgokeMkGHH6">Snapchat</a>
+    <a href="social.html">Socials</a>
   </p>
 
 
