--- a/index.html
+++ b/index.html
@@ -3,37 +3,25 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/animate.css">
   <title>Jadennl</title>
 </head>
 
 <body>
+  <div class="container">
+    <div class="animated zoomIn" id="intro">
+      <h1>
+        Jaden
+      </h1>
+    </div>
 
-  <h1>
-    Jaden
-  </h1>
-  <h2>
-    About Me
-  </h2>
-  <p>
-    I am a high school student learning various programming languages.
-  </p>
-
-  <h3>
-    Languages:
-  </h3>
-  <ul>
-    <li>Java</li>
-    <li>(Learning) Javascript</li>
-    <li>(Learning) Lua</li>
-  </ul>
-  <hr>
-  <h2>
-    Links:
-  </h2>
-  <p>
-    <a href="html/social.html">Socials</a>
-  </p>
-
+    <div class="nav" id="nav"> 
+      <h2>
+        <a href="html/about.html">About</a>
+        <a href="html/social.html">Socials</a>
+      </h2>
+    </div>
+  </div>
 
 </body>
 
